ci: complete build

--- a/.BuildMatrix.yml
+++ b/.BuildMatrix.yml
@@ -5,21 +5,21 @@ parameters:
 
 steps:
 - powershell: |
-      # Set-PSDebug -Trace 1
+      Set-PSDebug -Trace 1
       
-      # if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
-      # git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
+      if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
+      git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
       
-      # # Only build if there a change in the solution path for the current PR, if we're not in a PR
-      # if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
+      # Only build if there a change in the solution path for the current PR, if we're not in a PR
+      if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
         
-      & $env:msbuildpath ${{ parameters.solutionname }} /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
+        & $env:msbuildpath ${{ parameters.solutionname }} /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
-      #   if (($lastexitcode -ne 0)) {
-      #     exit $lastexitcode
-      #   }
+        if (($lastexitcode -ne 0)) {
+          exit $lastexitcode
+        }
 
-      #   # Clean the whole tree after every build to avoid disk space issues
-      #   git clean -fdx
-      # }    
+        # Clean the whole tree after every build to avoid disk space issues
+        git clean -fdx
+      }    
   displayName: Build Matrix Samples
