--- a/.BuildMatrix.yml
+++ b/.BuildMatrix.yml
@@ -8,7 +8,7 @@ steps:
       Set-PSDebug -Trace 1
       
       if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
-      git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
+      git diff --quiet HEAD "origin/$TargetBranch" -- "${{ parameters.solutionname }}"
       
       # Only build if there a change in the solution path for the current PR, if we're not in a PR
       if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
