ci: test build hardcoded path

--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -15,4 +15,4 @@ jobs:
   steps:
   - template: .BuildMatrix.yml
     parameters:
-      arguments: ${{ parameters.solutionname }}
+      solutionname: ${{ parameters.solutionname }}
