--- a/.BuildMatrix.yml
+++ b/.BuildMatrix.yml
@@ -1,5 +1,5 @@
 parameters:
-- name: arguments
+- name: solutionname
   type: string
   default: ''
 
@@ -9,14 +9,16 @@ steps:
 
 - powershell: |
       Set-PSDebug -Trace 1
-      
+
+      $solutionname = "D:/a/1/s/reference/Commerce/Commerce.sln"
+
       if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
-      git diff --quiet HEAD "origin/$TargetBranch" -- "${{ parameters.arguments }}"
+      git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionname"
       
       # Only build if there a change in the solution path for the current PR, if we're not in a PR
       if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
         
-        & $env:msbuildpath ${{ parameters.arguments }} /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
+        & $env:msbuildpath $solutionname /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
         if (($lastexitcode -ne 0)) {
           exit $lastexitcode
