ci: renaming file

--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -16,6 +16,6 @@ jobs:
       value: false
 
   steps:
-  - template: .BuildMatrix.yml
+  - template: build-samples.yml
     parameters:
       solutionPath: ${{ parameters.solutionPath }}
