--- a/build-samples.yml
+++ b/build-samples.yml
@@ -7,6 +7,16 @@ steps:
 - checkout: self
   clean: 'true'
 
+
+- template: build/templates/dotnet-install-windows.yml
+
+- powershell: |
+      & choco install vswhere
+      $msbuildpath=(vswhere -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe -nologo)
+
+      echo "##vso[task.setvariable variable=msbuildpath]$msbuildpath"
+  displayName: Set MSBUILDPATH
+
 - powershell: |
       Set-PSDebug -Trace 1
       
