--- a/build-samples.yml
+++ b/build-samples.yml
@@ -1,12 +1,11 @@
 parameters:
-- name: solutionPath
+- name: path
   type: string
   default: ''
 
 steps:
 - checkout: self
   clean: 'true'
-
 
 - template: build/templates/dotnet-install-windows.yml
 
@@ -20,13 +19,19 @@ steps:
 - powershell: |
       Set-PSDebug -Trace 1
       
+      Write-Host "${{ parameters.path }}"
+
       if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
-      git diff --quiet HEAD "origin/$TargetBranch" -- "${{ parameters.solutionPath }}"
+
+      $solutionPath=[System.IO.Path]::GetDirectoryName("${{ parameters.path }}");
+      Write-Host "$solutionPath"
+
+      git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
       
       # Only build if there a change in the solution path for the current PR, if we're not in a PR
       if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
         
-        & $env:msbuildpath ${{ parameters.solutionPath }} /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
+        & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
         if (($lastexitcode -ne 0)) {
           exit $lastexitcode
