--- a/build-samples.yml
+++ b/build-samples.yml
@@ -3,11 +3,32 @@ parameters:
   type: string
   default: ''
 
+variables:
+- name: buildSample
+  value: true
+
 steps:
 - checkout: self
   clean: 'true'
 
-- template: build/templates/dotnet-install-windows.yml
+- powershell: |
+      Write-Host "${{ parameters.path }}"
+
+      if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
+
+      $solutionPath=[System.IO.Path]::GetDirectoryName("${{ parameters.path }}");
+      Write-Host "$solutionPath"
+
+      git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
+
+      # Only build if there a change in the solution path for the current PR, if we're not in a PR
+      if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
+        Write-Host "##vso[task.setvariable variable=buildSample]false"
+      }  
+displayName: Check Build
+
+- ${{ if ($(buildSample) -eq true) }}:
+  - template: build/templates/dotnet-install-windows.yml
 
 - powershell: |
       & choco install vswhere
@@ -21,15 +42,7 @@ steps:
       
       Write-Host "${{ parameters.path }}"
 
-      if($env:System_PullRequest_TargetBranch -eq $null) { $TargetBranch = "master" } else { $TargetBranch = $env:System_PullRequest_TargetBranch; }
-
-      $solutionPath=[System.IO.Path]::GetDirectoryName("${{ parameters.path }}");
-      Write-Host "$solutionPath"
-
-      git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
-      
-      # Only build if there a change in the solution path for the current PR, if we're not in a PR
-      if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
+      if($(buildSample) -eq true)) {
         
         & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
