--- a/build-samples.yml
+++ b/build-samples.yml
@@ -16,14 +16,16 @@ steps:
       Write-Host "$solutionPath"
 
       git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
-
+      $buildSample = true
       # Only build if there a change in the solution path for the current PR, if we're not in a PR
       if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
-        Write-Host "##vso[task.setvariable variable=buildSample]false"
+        $buildSample = false
       }  
+
+      echo "##vso[task.setvariable variable=buildSample]$buildSample"
   displayName: Check Build
 
-- ${{ if ($(buildSample) -eq true) }}:
+- ${{ if ($env:buildSample -eq true) }}:
   - template: build/templates/dotnet-install-windows.yml
 
 - powershell: |
@@ -38,7 +40,7 @@ steps:
       
       Write-Host "${{ parameters.path }}"
 
-      if($(buildSample) -eq true)) {
+      if ($env:buildSample -eq true) {
         
         & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
