--- a/build-samples.yml
+++ b/build-samples.yml
@@ -25,7 +25,7 @@ steps:
       echo "##vso[task.setvariable variable=buildSample]$buildSample"
   displayName: Check Build
 
-- ${{ if ($env:buildSample -eq true) }}:
+- ${{ if eq($env:buildSample, true) }}:
   - template: build/templates/dotnet-install-windows.yml
 
 - powershell: |
