--- a/UI/MvuxHowTos/SliderApp/SliderApp.Wasm/SliderApp.Wasm.csproj
+++ b/UI/MvuxHowTos/SliderApp/SliderApp.Wasm/SliderApp.Wasm.csproj
@@ -5,6 +5,7 @@
 		<NoWarn>$(NoWarn);NU1504;NU1505;NU1701</NoWarn>
 		<!-- Disabled due to issue with Central Package Management with implicit using -->
 		<ImplicitUsings>disable</ImplicitUsings>
+		<WasmPWAManifestFile>manifest.webmanifest</WasmPWAManifestFile>
 		<AppDesignerFolder>Properties</AppDesignerFolder>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
@@ -27,6 +28,7 @@
 		<!-- <WasmShellGenerateAOTProfile>true</WasmShellGenerateAOTProfile> -->
 	</PropertyGroup>
 	<ItemGroup>
+		<Content Include="manifest.webmanifest" />
 	</ItemGroup>
 	<ItemGroup>
 		<EmbeddedResource Include="WasmCSS\Fonts.css" />
