--- a/build-samples.yml
+++ b/build-samples.yml
@@ -20,7 +20,7 @@ steps:
       # Only build if there a change in the solution path for the current PR, if we're not in a PR
       if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
         $buildSample = $true
-      }  
+      }
 
       echo "##vso[task.setvariable variable=buildSample]$buildSample"
   displayName: Check Build
@@ -40,7 +40,7 @@ steps:
       
       Write-Host "${{ parameters.path }}"
 
-      if ($buildSample) {
+      if ($buildSample -eq $true) {
         
         & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
