fix: Adjusting exit code

--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -9,6 +9,8 @@ jobs:
     matrix:
       Commerce:
         solutionPath: 'D:\a\1\s\reference\Commerce\Commerce.sln'
+      NotChanged:
+        solutionPath: 'D:\a\1\s\UI\AdvancedXBind\AdvancedXBind.sln'
     # matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
   
   variables:
