--- a/build-samples.yml
+++ b/build-samples.yml
@@ -16,36 +16,39 @@ steps:
       Write-Host "$solutionPath"
 
       git diff --quiet HEAD "origin/$TargetBranch" -- "$solutionPath"
-      $buildSample = 0
+      $buildSample = $false
       # Only build if there a change in the solution path for the current PR, if we're not in a PR
       if( ("$env:System_PullRequest_PullRequestId" -eq '') -or ($global:LASTEXITCODE -ne 0)) {
-        $buildSample = 1
+        $buildSample = $true
       }
-
       $global:LASTEXITCODE = 0
+
+      Write-Host "$buildSample"
       echo "##vso[task.setvariable variable=buildSample]$buildSample"
   displayName: Check Build
 
-- ${{ if eq(variables['buildSample'], 1) }}:
-  - template: build/templates/dotnet-install-windows.yml
+- template: build/templates/dotnet-install-windows.yml
 
 - powershell: |
-      & choco install vswhere
-      $msbuildpath=(vswhere -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe -nologo)
+      if ( $buildSample ) {
+        & choco install vswhere
+        $msbuildpath=(vswhere -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe -nologo)
 
-      echo "##vso[task.setvariable variable=msbuildpath]$msbuildpath"
+        echo "##vso[task.setvariable variable=msbuildpath]$msbuildpath"
+      }
   displayName: Set MSBUILDPATH
 
 - powershell: |
       Set-PSDebug -Trace 1
+      Write-Host "$buildSample"
       
       Write-Host "${{ parameters.path }}"
 
-      if ($buildSample -eq 1) {
+      if ( $buildSample ) {
         
         & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
         
-        if (($lastexitcode -ne 0)) {
+        if ( $lastexitcode -ne 0 ) {
           exit $lastexitcode
         }
 
