fix: build error

--- a/UI/MvuxHowTos/WeatherApp/WeatherApp/WeatherApp.csproj
+++ b/UI/MvuxHowTos/WeatherApp/WeatherApp/WeatherApp.csproj
@@ -48,6 +48,7 @@
 	</Choose>
 
 	<ItemGroup>
+	<UnoImage Include="Assets\**\*.svg" />
 		<UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
 	</ItemGroup>
 </Project>
