--- a/UI/MvuxHowTos/StockMarketApp/StockMarketApp/StockMarketApp.csproj
+++ b/UI/MvuxHowTos/StockMarketApp/StockMarketApp/StockMarketApp.csproj
@@ -56,6 +56,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	<UnoImage Include="Assets\**\*.svg" />
 	  <UpToDateCheckInput Remove="AppResources.xaml" />
 	</ItemGroup>
 
