--- a/build-samples.yml
+++ b/build-samples.yml
@@ -27,17 +27,14 @@ steps:
       echo "##vso[task.setvariable variable=buildSample]$buildSample"
   displayName: Check Build
 
-- template: build/templates/dotnet-install-windows.yml
+# - template: build/templates/dotnet-install-windows.yml
 
 - powershell: |
-      if ( $(buildSample) ) {
-        Write-Host "Setting MSBuild path"
+      & choco install vswhere
+      $msbuildpath=(vswhere -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe -nologo)
 
-        & choco install vswhere
-        $msbuildpath=(vswhere -latest -requires Microsoft.Component.MSBuild -find MSBuild\**\Bin\MSBuild.exe -nologo)
-
-        echo "##vso[task.setvariable variable=msbuildpath]$msbuildpath"
-      }
+      echo "##vso[task.setvariable variable=msbuildpath]$msbuildpath"
+  condition: and(succeeded(), eq(variables.buildSample, true))
   displayName: Set MSBUILDPATH
 
 - powershell: |
