--- a/.azure-pipelines.BuildMatrix.yml
+++ b/.azure-pipelines.BuildMatrix.yml
@@ -6,12 +6,12 @@ jobs:
     vmImage: 'windows-2022'
 
   strategy:
-    matrix:
-      Commerce:
-        solutionPath: 'D:\a\1\s\reference\Commerce\Commerce.sln'
-      NotChanged:
-        solutionPath: 'D:\a\1\s\UI\AdvancedXBind\AdvancedXBind.sln'
-    # matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
+    # matrix:
+    #   Commerce:
+    #     solutionPath: 'D:\a\1\s\reference\Commerce\Commerce.sln'
+    #   NotChanged:
+    #     solutionPath: 'D:\a\1\s\UI\AdvancedXBind\AdvancedXBind.sln'
+    matrix: $[ dependencies.VS_Latest.outputs['generateJson.samplesJson'] ]
   
   variables:
     - name: UseDotNetNativeToolchain
