--- a/build-samples.yml
+++ b/build-samples.yml
@@ -27,7 +27,7 @@ steps:
       echo "##vso[task.setvariable variable=buildSample]$buildSample"
   displayName: Check Build
 
-# - template: build/templates/dotnet-install-windows.yml
+- template: build/templates/dotnet-install-windows.yml
 
 - powershell: |
       & choco install vswhere
@@ -39,23 +39,11 @@ steps:
 
 - powershell: |
       Set-PSDebug -Trace 1
-      Write-Host "$(buildSample)"
-      
       Write-Host "${{ parameters.path }}"
 
-      if ( $(buildSample) ) {
-        
-        & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
-        
-        if ( $lastexitcode -ne 0 ) {
-          exit $lastexitcode
-        }
+      & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
 
-        # Clean the whole tree after every build to avoid disk space issues
-        git clean -fdx
-      }
-      else {
-        $global:LASTEXITCODE = 0
-        exit 0
-      }
+      # Clean the whole tree after every build to avoid disk space issues
+      git clean -fdx
+  condition: and(succeeded(), eq(variables.buildSample, true))
   displayName: Build Matrix Samples
