Added code for Text & Chat Completion

--- a/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT/UnoChatGPT.csproj
+++ b/UI/UnoChatGPT/UnoChatGPT/UnoChatGPT/UnoChatGPT.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Betalgo.OpenAI" Version="6.8.5" />
 		<PackageReference Include="Uno.WinUI" Version="4.8.33" />
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.4" />
 		<PackageReference Include="Uno.Extensions.Configuration" Version="2.3.10" />
