--- a/UI/MvuxHowTos/WeatherApp/WeatherApp.Mobile/WeatherApp.Mobile.csproj
+++ b/UI/MvuxHowTos/WeatherApp/WeatherApp.Mobile/WeatherApp.Mobile.csproj
@@ -23,8 +23,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
-		<PackageReference Include="Uno.WinUI" Version="4.8.15" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.2" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.0-dev.1033" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.0-dev.297" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.15" />
