--- a/UI/MvuxHowTos/WeatherApp/WeatherApp.Wasm/WeatherApp.Wasm.csproj
+++ b/UI/MvuxHowTos/WeatherApp/WeatherApp.Wasm/WeatherApp.Wasm.csproj
@@ -27,8 +27,6 @@
 		<!-- <WasmShellGenerateAOTProfile>true</WasmShellGenerateAOTProfile> -->
 	</PropertyGroup>
 	<ItemGroup>
-	</ItemGroup>
-	<ItemGroup>
 		<EmbeddedResource Include="WasmCSS\Fonts.css" />
 		<EmbeddedResource Include="WasmScripts\AppManifest.js" />
 	</ItemGroup>
@@ -52,11 +50,12 @@
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.19" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.19" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.0-dev.1033" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.8.15" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.15" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.15" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.2" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.0-dev.297" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
