--- a/UI/MvuxHowTos/WeatherApp/WeatherApp/WeatherApp.csproj
+++ b/UI/MvuxHowTos/WeatherApp/WeatherApp/WeatherApp.csproj
@@ -8,9 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.8.15" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.0-dev.1033" />
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.2" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.0-dev.297" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
 
