--- a/reference/Commerce/Commerce.Windows/Commerce.Windows.csproj
+++ b/reference/Commerce/Commerce.Windows/Commerce.Windows.csproj
@@ -38,38 +38,38 @@
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221109.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755"/>
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1"/>
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230502000" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 
-	<PackageReference Include="Uno.WinUI.Skia.Gtk"  Version="4.8.15" />
-		<PackageReference Include="Uno.WinUI.RemoteControl"  Version="4.8.15" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging"  Version="4.8.15" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.3" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.4"/>
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.5.4"/>
+	<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.9.0-dev.1102" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.0-dev.1102" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.1102" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.6.0-dev.17" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.6.0-dev.50" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.6.0-dev.50" />
 		
-		<PackageReference Include="Uno.Extensions.Authentication" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Configuration" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Core" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Hosting" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Http" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Localization" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Navigation" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Reactive" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Serialization" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.3.0" />
-		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.3.0" />
+		<PackageReference Include="Uno.Extensions.Authentication" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Localization" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.4.0-dev.297" />
+		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.4.0-dev.297" />
 	</ItemGroup>
 
 	<!-- Defining the "Msix" ProjectCapability here allows the Single-project MSIX Packaging
