--- a/UI/MvuxHowTos/WeatherApp/WeatherApp.Mobile/WeatherApp.Mobile.csproj
+++ b/UI/MvuxHowTos/WeatherApp/WeatherApp.Mobile/WeatherApp.Mobile.csproj
@@ -28,7 +28,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.15" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.15" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.0-dev.1033" Condition="'$(Configuration)'=='Debug'" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="$(IsAndroid)">
