--- a/reference/Commerce/Commerce.Mobile/Commerce.Mobile.csproj
+++ b/reference/Commerce/Commerce.Mobile/Commerce.Mobile.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-<TargetFrameworks>$(TargetFrameworks);net6.0-android</TargetFrameworks>
-<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
-<TargetFrameworks>$(TargetFrameworks);net6.0-macos</TargetFrameworks>
-<TargetFrameworks>$(TargetFrameworks);net6.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>$(TargetFrameworks);net6.0-android</TargetFrameworks>
+		<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
+		<TargetFrameworks>$(TargetFrameworks);net6.0-macos</TargetFrameworks>
+		<TargetFrameworks>$(TargetFrameworks);net6.0-maccatalyst</TargetFrameworks>
 		<SingleProject>true</SingleProject>
 		<OutputType>Exe</OutputType>
 		<RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-ios'">iossimulator-x64</RuntimeIdentifier>
@@ -20,33 +20,33 @@
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net6.0-macos'">10.14</SupportedOSPlatformVersion>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.8.33" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.33" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.8.33" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.3" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.8" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.5.8" />
+		<PackageReference Include="Uno.WinUI" Version="4.10.0-dev.85" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.10.0-dev.85" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.0-dev.85" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.6.0-dev.25" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.6.0-dev.68" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.6.0-dev.68" />
 		
-		<PackageReference Include="Uno.Extensions.Authentication" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Configuration" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Core" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Hosting" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Http" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Localization" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Navigation" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Reactive" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Serialization" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.3.10" />
-		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.3.10" />
+		<PackageReference Include="Uno.Extensions.Authentication" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Localization" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.4.0-dev.329" />
+		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.4.0-dev.329" />
 	</ItemGroup>
 
 	<Choose>
@@ -67,7 +67,7 @@
 				<MtouchExtraArgs>$(MtouchExtraArgs) --registrar:static</MtouchExtraArgs>
 			</PropertyGroup>
 			<ItemGroup>
-				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
+				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.6.0-dev.2" />
 			</ItemGroup>
 		</When>
 		<When Condition="'$(TargetFramework)'=='net6.0-maccatalyst'">
@@ -82,7 +82,7 @@
 				<InvariantGlobalization>false</InvariantGlobalization>
 			</PropertyGroup>
 			<ItemGroup>
-				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
+				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.6.0-dev.2" />
 			</ItemGroup>
 		</When>
 		<When Condition="'$(TargetFramework)'=='net6.0-macos'">
