ci: Pipeline should fail on build failure

--- a/build-samples.yml
+++ b/build-samples.yml
@@ -25,6 +25,9 @@ steps:
 
       & $env:msbuildpath "${{ parameters.path }}" /r /p:Configuration=Release /p:WasmShellMonoRuntimeExecutionMode=Interpreter /p:AotAssemblies=false /p:PublishTrimmed=false /p:WasmShellILLinkerEnabled=false /ds ;
 
+      # fail the build on last exit code non zero
+      if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+
       # Clean the whole tree after every build to avoid disk space issues
       git clean -fdx
   displayName: Build Matrix Samples
