chore: Avoid CS8012 as error when deploying to iOS device

--- a/reference/simple-calc/MVVM-Xaml/Directory.Build.props
+++ b/reference/simple-calc/MVVM-Xaml/Directory.Build.props
@@ -9,7 +9,7 @@
 		<SynthesizeLinkMetadata>true</SynthesizeLinkMetadata>
 
 		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-		<NoWarn>$(NoWarn);Uno0001;CS1998;CA1416;NU1507</NoWarn>
+		<NoWarn>$(NoWarn);Uno0001;CS1998;CA1416;NU1507;CS8012</NoWarn>
 
 		<DefaultLanguage>en</DefaultLanguage>
 
