--- a/reference/simple-calc/resources/shared-resources.targets
+++ b/reference/simple-calc/resources/shared-resources.targets
@@ -39,7 +39,7 @@
 														Condition="$(IsMvu)" />
 	</ItemGroup>
 
-	<Target Name="CopyResources" BeforeTargets="Build;CoreBuild;UpdateResources">
+	<Target Name="CopyResources" BeforeTargets="Build;CoreBuild;UpdateResources;CoreCompile;BeforeCompile;XamlPreCompile">
 		<Copy SourceFiles="@(SimpleCalcTemplateFile)" 
 					DestinationFiles="@(SimpleCalcTemplateFile->'%(LogicalPath)')"
 					SkipUnchangedFiles="true"
@@ -49,7 +49,7 @@
 
 	<Target Name="UpdateResources"
 					AfterTargets="CopyResources"
-					BeforeTargets="CoreCompile">
+					BeforeTargets="CoreCompile;BeforeCompile;XamlPreCompile">
 		<ItemGroup>
 			<_TemplateFile Include="MainPage*.cs" />
 		</ItemGroup>
