fix(skia): Restore SKSwapChainPanel with skiasharp 2.88.4

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
@@ -26,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.4-preview.84" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
