--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Mobile/SkiaSharpTest.Mobile.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Mobile/SkiaSharpTest.Mobile.csproj
@@ -14,8 +14,7 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
-	<!--<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.3" />-->
-	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
     <PackageReference Include="Uno.WinUI" Version="4.7.30" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.30" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
