--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Gtk/SkiaSharpTest.Skia.Gtk.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.Gtk/SkiaSharpTest.Skia.Gtk.csproj
@@ -15,17 +15,17 @@
     <UpToDateCheckInput Include="..\SkiaSharpTest.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>	
-    <PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />	
-    <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.3" />	
-    <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.3" />	
-    <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.3" />	
+    <PackageReference Include="HarfBuzzSharp" Version="2.8.2.4-preview.84" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.4-preview.84" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.4-preview.84" />	
+    <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.4-preview.84" />	
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.7.30" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.30" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.30" />	
-	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
   </ItemGroup>
   <Import Project="..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems" Label="Shared" />
 </Project>
