--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.WPF/SkiaSharpTest.Skia.WPF.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Skia.WPF/SkiaSharpTest.Skia.WPF.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
@@ -22,8 +22,8 @@
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.30" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.30" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\SkiaSharpTest.Shared\**\*.xaml" />
