chore: Commerce target stable packages

--- a/reference/Commerce/Commerce/Commerce.Mobile/Commerce.Mobile.csproj
+++ b/reference/Commerce/Commerce/Commerce.Mobile/Commerce.Mobile.csproj
@@ -28,35 +28,35 @@
 	<ItemGroup>
 		<PackageReference Include="Uno.Resizetizer" Version="1.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.6.0-dev.2" />
+		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 
-		<PackageReference Include="Uno.WinUI" Version="4.10.0-dev.115" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.10.0-dev.115" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.10.0-dev.115" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.7.0-dev.2" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="3.1.0-dev.1" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.1.0-dev.1" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.6.1" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="3.0.5" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
 
-		<PackageReference Include="Uno.Extensions.Authentication" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Configuration" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Core" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Hosting" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Http" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Localization" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Navigation" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Reactive" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Serialization" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.5.0-dev.10" />
+		<PackageReference Include="Uno.Extensions.Authentication" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Localization" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.4.2" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="$(IsAndroid)">
