--- a/reference/Commerce/Commerce/Commerce/Commerce.csproj
+++ b/reference/Commerce/Commerce/Commerce/Commerce.csproj
@@ -10,41 +10,41 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Uno.Dsp.Tasks" Version="1.1.0" />
-		<PackageReference Include="Uno.WinUI" Version="4.10.0-dev.115" />
+		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
 		<PackageReference Include="Uno.Resizetizer" Version="1.1.0" />
-		<PackageReference Include="Uno.Extensions.Configuration" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Http" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.7.0-dev.2" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="3.1.0-dev.1" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.1.0-dev.1" />
-		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.5.0-dev.10" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Http.Refit" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Serialization.Http" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Serialization.Refit" Version="2.4.2" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.6.1" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="3.0.5" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
+		<PackageReference Include="Uno.Extensions.Authentication.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.4.2" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 
-		<PackageReference Include="Uno.Extensions.Authentication" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Core" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Hosting" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Localization" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Navigation" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Reactive" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.5.0-dev.10" />
-		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.5.0-dev.10" />
+		<PackageReference Include="Uno.Extensions.Authentication" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Localization" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.4.2" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.4.2" />
 	</ItemGroup>
 
 	<Choose>
 		<When Condition="$(IsWinAppSdk)">
 			<ItemGroup>
 				<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230313.1" />
-				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 			</ItemGroup>
 
 			<ItemGroup>
