chore(deps): Updating WinAppSdk

--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Windows/AppBenchmark.Windows.csproj
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Windows/AppBenchmark.Windows.csproj
@@ -26,8 +26,8 @@
 	<ItemGroup>
 		<PackageReference Include="Uno.BenchmarkDotNet" Version="0.11.7-develop" />
 		<PackageReference Include="Uno.BenchmarkDotNet.Annotations" Version="0.11.7-develop" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 
