--- a/UI/BluetoothExplorer/UnoBluetoothExplorer.Windows/UnoBluetoothExplorer.Windows.csproj
+++ b/UI/BluetoothExplorer/UnoBluetoothExplorer.Windows/UnoBluetoothExplorer.Windows.csproj
@@ -17,8 +17,8 @@
     <Content Include="Images\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
     <PackageReference Include="Uno.WinUI" Version="4.8.15" />
