--- a/UI/MvuxHowTos/SelectionPeopleApp/SelectionPeopleApp.Windows/SelectionPeopleApp.Windows.csproj
+++ b/UI/MvuxHowTos/SelectionPeopleApp/SelectionPeopleApp.Windows/SelectionPeopleApp.Windows.csproj
@@ -25,8 +25,8 @@
 	<ItemGroup>
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
 		<PackageReference Include="Uno.WinUI" Version="4.8.33" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230313.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.10" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
