--- a/UI/MvuxHowTos/StockMarketApp/StockMarketApp/StockMarketApp.csproj
+++ b/UI/MvuxHowTos/StockMarketApp/StockMarketApp/StockMarketApp.csproj
@@ -17,8 +17,8 @@
 	<Choose>
 		<When Condition="$(IsWinAppSdk)">
 			<ItemGroup>
-				<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230313.1" />
-				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+				<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+				<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 			</ItemGroup>
 
 			<ItemGroup>
