--- a/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Windows/PetAdoptUI.Windows.csproj
+++ b/UI/PetAdoptUI/PetAdoptUI/PetAdoptUI.Windows/PetAdoptUI.Windows.csproj
@@ -24,8 +24,8 @@
 
 	<ItemGroup>		
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.4" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />		
 
