--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
@@ -28,8 +28,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.4-preview.84" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 
