--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Windows/DemoApp.Windows.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Windows/DemoApp.Windows.csproj
@@ -27,8 +27,8 @@
 		<PackageReference Include="Nethereum.JsonRpc.Client" Version="4.11.0" />
 		<PackageReference Include="Nethereum.JsonRpc.RpcClient" Version="4.11.0" />
 		<PackageReference Include="Nethereum.Web3" Version="4.11.0" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221109.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.3" />
