--- a/UI/UnoMaterialToolkitSample/UnoMaterialToolkitSample/UnoMaterialToolkitSample.csproj
+++ b/UI/UnoMaterialToolkitSample/UnoMaterialToolkitSample/UnoMaterialToolkitSample.csproj
@@ -31,7 +31,7 @@
 			<PackageReference Include="Uno.WinUI" Version="4.8.15" />
 		</ItemGroup>
 		<ItemGroup Condition="'$(TargetFramework)'=='net7.0-windows10.0.18362'">
-			<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
+			<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
 			<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.28" />
 			<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" />
   </ItemGroup>
