chore(deps): Updating references

--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Shared/UnoChat.Shared.globs.props
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Shared/UnoChat.Shared.globs.props
@@ -21,6 +21,7 @@
 		<_Globbed_PRIResource Include="$(MSBuildThisFileDirectory)**/*.resw" Exclude="@(PRIResource)" />
 		<PRIResource Include="@(_Globbed_PRIResource)" />
 
+		<_Globbed_Content Include="$(MSBuildThisFileDirectory)../UnoChat.Client.Animations/**/*.*" Exclude="@(Content)" />
 		<_Globbed_Content Include="$(MSBuildThisFileDirectory)Assets/**/*.*" Exclude="@(Content)" />
 		<Content Include="@(_Globbed_Content)" />
 
