--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Wasm/UnoChat.Wasm.csproj
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Wasm/UnoChat.Wasm.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
 		
 	</PropertyGroup>
@@ -41,18 +41,19 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>	
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />    
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.4" />    
     <PackageReference Include="MVx.Observable" Version="5.1.18" />
-    <PackageReference Include="System.Reactive" Version="5.0.0" />
+    <PackageReference Include="System.Reactive" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.3" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.3" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.24" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.24" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.26" />
   </ItemGroup>
   <Import Project="..\UnoChat.Shared\UnoChat.Shared.projitems" Label="Shared" Condition="Exists('..\UnoChat.Shared\UnoChat.Shared.projitems')" />
 </Project>
