--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Windows/UnoChat.Windows.csproj
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Windows/UnoChat.Windows.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>	    
+		<TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>	    
 		<TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
 		<RootNamespace>UnoChat</RootNamespace>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
@@ -9,10 +9,7 @@
 		<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
 		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
-		<EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
-		<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
-		<AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
-		<!--<GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>-->
+		<EnableMsixTooling>true</EnableMsixTooling>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -24,27 +21,26 @@
 		<Content Include="Images\StoreLogo.png" />
 		<Content Include="Images\Wide310x150Logo.scale-200.png" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.WinUI.Lottie" Version="7.1.2" />
-		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.2" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.9" />
 		<!--<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />-->
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		
 
 		<!--<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />-->
 		<PackageReference Include="MVx.Observable" Version="5.1.18" />
-		<PackageReference Include="System.Reactive" Version="5.0.0" />
+		<PackageReference Include="System.Reactive" Version="6.0.0" />
 		<!--<PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />-->
 		<!--<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />-->
-		<PackageReference Include="Uno.Extensions" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions" Version="2.4.2" />
 		<!--<PackageReference Include="Uno.Extensions.Core" Version="2.2.0" />-->
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.4.2" />
 		<!--<PackageReference Include="Uno.Foundation.Logging" Version="4.7.30" />-->
-		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
-		<PackageReference Include="Uno.UI" Version="4.7.37" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.7.37" />
+		<!--<PackageReference Include="Uno.WinUI" Version="4.9.26" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.9.26" />-->
 
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
@@ -55,20 +51,6 @@
 	<ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
 		<ProjectCapability Include="Msix" />
 	</ItemGroup>
-	
-	<ItemGroup>
-		<!--
-		If you encounter this error message:
-		
-			error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll. Please update to a newer .NET SDK in order to reference this assembly.
 
-		This means that the two packages below must be aligned with the "build" version number of
-		the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
-		must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-		-->
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.28" />
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" />
-	</ItemGroup>
-	
 	<Import Project="..\UnoChat.Shared\UnoChat.Shared.projitems" Label="Shared" />
 </Project>
